--- a/.github/workflows/main_c2027394.yml
+++ b/.github/workflows/main_c2027394.yml
@@ -38,8 +38,8 @@ jobs:
         with:
           name: python-app
           path: |
-            .
-            !antenv/
+                  DCBS/itapps
+                  !antenv//
 
       # 🚫 Opting Out of Oryx Build
       # If you prefer to disable the Oryx build process during deployment, follow these steps:
@@ -63,4 +63,5 @@ jobs:
         with:
           app-name: 'c2027394'
           slot-name: 'Production'
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E0C0B94A55644BBB2D43A10AF7DB684 }}
