--- a/.github/workflows/main_c2027394.yml
+++ b/.github/workflows/main_c2027394.yml
@@ -32,14 +32,23 @@ jobs:
           source antenv/bin/activate
           pip install -r requirements.txt
                 
-      # By default, when you enable GitHub CI/CD integration through the Azure portal, the platform automatically sets the SCM_DO_BUILD_DURING_DEPLOYMENT application setting to true. This triggers the use of Oryx, a build engine that handles application compilation and dependency installation (e.g., pip install) directly on the platform during deployment. Hence, we exclude the antenv virtual environment directory from the deployment artifact to reduce the payload size. 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
-          name: python-app
-          path: |
-                  DCBS/itapps
-                  !antenv//
+          app-name: 'c2027394'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E0C0B94A55644BBB2D43A10AF7DB684 }}
+          
+          # CRITICAL: Tell the deploy action which folder contains the application files
+          package: DCBS/itapps/ 
+          
+          # Set the Django settings module and the Startup Command
+          app-settings: |
+            # Tells Django where your settings file is: itapps/itapps/settings.py
+            - DJANGO_SETTINGS_MODULE=itapps.itapps.settings
+            # Sets the Gunicorn startup command using the correct WSGI path: itapps/itapps/wsgi.py
+            - PYTHON_STARTUP_SCRIPT=gunicorn --bind 0.0.0.0 --workers 2 itapps.itapps.wsgi
 
       # 🚫 Opting Out of Oryx Build
       # If you prefer to disable the Oryx build process during deployment, follow these steps:
@@ -65,3 +74,4 @@ jobs:
           slot-name: 'Production'
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E0C0B94A55644BBB2D43A10AF7DB684 }}
+
