--- a/.github/workflows/clean-main_c2027394.yml
+++ b/.github/workflows/clean-main_c2027394.yml
@@ -64,3 +64,10 @@ jobs:
           app-name: 'c2027394'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0ED062322A3F40CAA0480846E8EFD37B }}
+          
+          # CRITICAL: Set the Django settings module and the Startup Command
+          app-settings: |
+            # Tells Django where your settings file is: itapps/settings.py
+            - DJANGO_SETTINGS_MODULE=itapps.settings
+            # Sets the Gunicorn startup command using the correct WSGI path: itapps/wsgi.py
+            - PYTHON_STARTUP_SCRIPT=gunicorn --bind 0.0.0.0 --workers 2 itapps.wsgi
