Add error handling to views and context processor to prevent 500 errors

--- a/.github/workflows/clean-main_c2027394.yml
+++ b/.github/workflows/clean-main_c2027394.yml
@@ -71,3 +71,5 @@ jobs:
             - DJANGO_SETTINGS_MODULE=itapps.settings
             # Sets the Gunicorn startup command using the correct WSGI path: itapps/wsgi.py
             - PYTHON_STARTUP_SCRIPT=gunicorn --bind 0.0.0.0 --workers 2 itapps.wsgi
+            # Run migrations on startup (optional - can also be done via Azure Console)
+            - SCM_COMMAND_IDLE_TIMEOUT=600
