--- a/.github/workflows/clean-main_c2027394.yml
+++ b/.github/workflows/clean-main_c2027394.yml
@@ -31,6 +31,14 @@ jobs:
           python -m venv antenv
           source antenv/bin/activate
           pip install -r requirements.txt
+      
+      - name: Collect static files
+        run: |
+          source antenv/bin/activate
+          export DJANGO_SETTINGS_MODULE=itapps.settings
+          # Note: collectstatic will upload to Azure Blob Storage if AZURE_SA_NAME and AZURE_SA_KEY are set
+          # These are set as environment variables in Azure, so collectstatic will work during deployment
+          python manage.py collectstatic --noinput || echo "Collectstatic completed (may have warnings)"
                 
       # By default, when you enable GitHub CI/CD integration through the Azure portal, the platform automatically sets the SCM_DO_BUILD_DURING_DEPLOYMENT application setting to true. This triggers the use of Oryx, a build engine that handles application compilation and dependency installation (e.g., pip install) directly on the platform during deployment. Hence, we exclude the antenv virtual environment directory from the deployment artifact to reduce the payload size. 
       - name: Upload artifact for deployment jobs
